Further cleanup
Signed-off-by: BT (calcastor/mame) <43831917+calcastor@users.noreply.github.com>